Added Builder Pattern to Tender.java and completed some code clean-ups